// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render as checked 1`] = `
<div class="mdc-checkbox mdc-checkbox--upgraded"><input type="checkbox" class="mdc-checkbox__native-control">
  <div class="mdc-checkbox__background"><svg viewBox="0 0 24 24" class="mdc-checkbox__checkmark">
      <path fill="none" d="M1.73,12.91 8.1,19.28 22.79,4.59" class="mdc-checkbox__checkmark-path"></path>
    </svg>
    <div class="mdc-checkbox__mixedmark"></div>
  </div>
</div>
`;

exports[`Checkbox should render as disabled 1`] = `
<div class="mdc-checkbox mdc-checkbox--upgraded mdc-checkbox--disabled"><input type="checkbox" class="mdc-checkbox__native-control" disabled="">
  <div class="mdc-checkbox__background"><svg viewBox="0 0 24 24" class="mdc-checkbox__checkmark">
      <path fill="none" d="M1.73,12.91 8.1,19.28 22.79,4.59" class="mdc-checkbox__checkmark-path"></path>
    </svg>
    <div class="mdc-checkbox__mixedmark"></div>
  </div>
</div>
`;

exports[`Checkbox should render as indeterminate 1`] = `
<div class="mdc-checkbox mdc-checkbox--upgraded mdc-checkbox--selected"><input type="checkbox" class="mdc-checkbox__native-control" aria-checked="mixed">
  <div class="mdc-checkbox__background"><svg viewBox="0 0 24 24" class="mdc-checkbox__checkmark">
      <path fill="none" d="M1.73,12.91 8.1,19.28 22.79,4.59" class="mdc-checkbox__checkmark-path"></path>
    </svg>
    <div class="mdc-checkbox__mixedmark"></div>
  </div>
</div>
`;

exports[`Checkbox should render with no prop 1`] = `
<div class="mdc-checkbox mdc-checkbox--upgraded"><input type="checkbox" class="mdc-checkbox__native-control">
  <div class="mdc-checkbox__background"><svg viewBox="0 0 24 24" class="mdc-checkbox__checkmark">
      <path fill="none" d="M1.73,12.91 8.1,19.28 22.79,4.59" class="mdc-checkbox__checkmark-path"></path>
    </svg>
    <div class="mdc-checkbox__mixedmark"></div>
  </div>
</div>
`;
